--- a/docker/server/Dockerfile
+++ b/docker/server/Dockerfile
@@ -4,12 +4,12 @@ RUN echo "deb http://archive.debian.org/debian/ stretch main contrib non-free" >
     && echo "deb-src http://archive.debian.org/debian/ stretch main contrib non-free" >> /etc/apt/sources.list \
     && apt-get update -y \
     && apt-get upgrade -y
-
 # Install PDO and mysql, PGSQL Drivers
 RUN apt-get install -y libpq-dev \
   && docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql \
   && docker-php-ext-install pdo pdo_pgsql pgsql \
-  && docker-php-ext-install mysqli pdo_mysql
+  && docker-php-ext-install mysqli pdo_mysql \
+RUN docker-php-ext-install mysqli && docker-php-ext-enable mysqli
 RUN a2enmod rewrite
 
 RUN apt-get clean -y && apt-get autoclean -y && apt-get autoremove -y \
