--- a/docker/server/Dockerfile
+++ b/docker/server/Dockerfile
@@ -8,7 +8,7 @@ RUN echo "deb http://archive.debian.org/debian/ stretch main contrib non-free" >
 RUN apt-get install -y libpq-dev \
   && docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql \
   && docker-php-ext-install pdo pdo_pgsql pgsql \
-  && docker-php-ext-install mysqli pdo_mysql \
+  && docker-php-ext-install mysqli pdo_mysql
 RUN docker-php-ext-install mysqli && docker-php-ext-enable mysqli
 RUN a2enmod rewrite
 
